@@ -1,1 +1,1 @@
-__all__ = [ "BeautifulSoup","feedfinder","feedparser","linreg","wordpresslib","html2text.py" ]
+__all__ = [ "BeautifulSoup","feedfinder","feedparser","linreg","wordpresslib" ]
