@@ -131,6 +131,7 @@ CREATE TABLE model_aggregator_feed_article
     article_title TEXT NOT NULL NOT NULL DEFAULT '',
     article_author VARCHAR(200) NOT NULL DEFAULT '', 
     article_content TEXT NOT NULL NOT NULL DEFAULT '', 
+    keywords TEXT NOT NULL DEFAULT '',
     created_at TIMESTAMP NOT NULL DEFAULT '0000-00-00 00:00:00', 
     updated_at TIMESTAMP NOT NULL DEFAULT '0000-00-00 00:00:00',
     PRIMARY KEY (aggregator_feed_article_id),
@@ -202,9 +203,9 @@ CREATE TABLE model_user_blog
     blog_username VARCHAR(255),
     blog_password VARCHAR(255),
     feeding_auto TINYINT(1) NOT NULL DEFAULT 0,
-    feeding_keywords TEXT NOT NULL DEFAULT '',
     publication_auto TINYINT(1) NOT NULL DEFAULT 0,
     publication_interval INTEGER UNSIGNED NOT NULL DEFAULT 0,
+    keywords TEXT NOT NULL DEFAULT '',
     created_at TIMESTAMP NOT NULL DEFAULT '0000-00-00 00:00:00',
     updated_at TIMESTAMP NOT NULL DEFAULT '0000-00-00 00:00:00',
     enabled TINYINT(1) NOT NULL DEFAULT 1,
